level_zero-sys/src/ze_api.rs

extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves cache properties of the device"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @remarks"]
    #[doc = "   _Analogues_"]
    #[doc = "     - clGetDeviceInfo"]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pCount`"]
    pub fn zeDeviceGetCacheProperties(
        hDevice: ze_device_handle_t,
        pCount: *mut u32,
        pCacheProperties: *mut ze_device_cache_properties_t,
    ) -> ze_result_t;
}
#[doc = ""]
#[doc = " @brief Device image properties queried using ::zeDeviceGetImageProperties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_image_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] Maximum image dimensions for 1D resources. if 0, then 1D images"]
    #[doc = "< are unsupported."]
    pub maxImageDims1D: u32,
    #[doc = "< [out] Maximum image dimensions for 2D resources. if 0, then 2D images"]
    #[doc = "< are unsupported."]
    pub maxImageDims2D: u32,
    #[doc = "< [out] Maximum image dimensions for 3D resources. if 0, then 3D images"]
    #[doc = "< are unsupported."]
    pub maxImageDims3D: u32,
    #[doc = "< [out] Maximum image buffer size in bytes. if 0, then buffer images are"]
    #[doc = "< unsupported."]
    pub maxImageBufferSize: u64,
    #[doc = "< [out] Maximum image array slices. if 0, then image arrays are"]
    #[doc = "< unsupported."]
    pub maxImageArraySlices: u32,
    #[doc = "< [out] Max samplers that can be used in kernel. if 0, then sampling is"]
    #[doc = "< unsupported."]
    pub maxSamplers: u32,
    #[doc = "< [out] Returns the maximum number of simultaneous image objects that"]
    #[doc = "< can be read from by a kernel. if 0, then reading images is"]
    #[doc = "< unsupported."]
    pub maxReadImageArgs: u32,
    #[doc = "< [out] Returns the maximum number of simultaneous image objects that"]
    #[doc = "< can be written to by a kernel. if 0, then writing images is"]
    #[doc = "< unsupported."]
    pub maxWriteImageArgs: u32,
}
#[test]
fn bindgen_test_layout__ze_device_image_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_image_properties_t>(),
        56usize,
        concat!("Size of: ", stringify!(_ze_device_image_properties_t))
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_image_properties_t>(),
        8usize,
        concat!("Alignment of ", stringify!(_ze_device_image_properties_t))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).stype as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).pNext as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxImageDims1D as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxImageDims1D)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxImageDims2D as *const _
                as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxImageDims2D)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxImageDims3D as *const _
                as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxImageDims3D)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxImageBufferSize as *const _
                as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxImageBufferSize)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxImageArraySlices
                as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxImageArraySlices)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxSamplers as *const _
                as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxSamplers)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxReadImageArgs as *const _
                as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxReadImageArgs)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_image_properties_t>())).maxWriteImageArgs as *const _
                as usize
        },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_image_properties_t),
            "::",
            stringify!(maxWriteImageArgs)
        )
    );
}
extern "C" {
    #[doc = ""]
    #[doc = " @brief Retrieves image properties of the device"]
    #[doc = ""]
    #[doc = " @details"]
    #[doc = "     - See ::zeImageGetProperties for format-specific capabilities."]
    #[doc = "     - The application may call this function from simultaneous threads."]
    #[doc = "     - The implementation of this function should be lock-free."]
    #[doc = ""]
    #[doc = " @returns"]
    #[doc = "     - ::ZE_RESULT_SUCCESS"]
    #[doc = "     - ::ZE_RESULT_ERROR_UNINITIALIZED"]
    #[doc = "     - ::ZE_RESULT_ERROR_DEVICE_LOST"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_HANDLE"]
    #[doc = "         + `nullptr == hDevice`"]
    #[doc = "     - ::ZE_RESULT_ERROR_INVALID_NULL_POINTER"]
    #[doc = "         + `nullptr == pImageProperties`"]
    pub fn zeDeviceGetImageProperties(
        hDevice: ze_device_handle_t,
        pImageProperties: *mut ze_device_image_properties_t,
    ) -> ze_result_t;
}
#[doc = ""]
#[doc = " @brief Device external memory import and export properties"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _ze_device_external_memory_properties_t {
    #[doc = "< [in] type of this structure"]
    pub stype: ze_structure_type_t,
    #[doc = "< [in,out][optional] pointer to extension-specific structure"]
    pub pNext: *mut ::std::os::raw::c_void,
    #[doc = "< [out] Supported external memory import types for memory allocations."]
    pub memoryAllocationImportTypes: ze_external_memory_type_flags_t,
    #[doc = "< [out] Supported external memory export types for memory allocations."]
    pub memoryAllocationExportTypes: ze_external_memory_type_flags_t,
    #[doc = "< [out] Supported external memory import types for images."]
    pub imageImportTypes: ze_external_memory_type_flags_t,
    #[doc = "< [out] Supported external memory export types for images."]
    pub imageExportTypes: ze_external_memory_type_flags_t,
}
#[test]
fn bindgen_test_layout__ze_device_external_memory_properties_t() {
    assert_eq!(
        ::std::mem::size_of::<_ze_device_external_memory_properties_t>(),
        32usize,
        concat!(
            "Size of: ",
            stringify!(_ze_device_external_memory_properties_t)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<_ze_device_external_memory_properties_t>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(_ze_device_external_memory_properties_t)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>())).stype as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(stype)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>())).pNext as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(pNext)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>()))
                .memoryAllocationImportTypes as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(memoryAllocationImportTypes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>()))
                .memoryAllocationExportTypes as *const _ as usize
        },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(memoryAllocationExportTypes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>())).imageImportTypes
                as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(imageImportTypes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<_ze_device_external_memory_properties_t>())).imageExportTypes
                as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(_ze_device_external_memory_properties_t),
            "::",
            stringify!(imageExportTypes)
        )
    );
}
